y.output
Terminals which are not used

   CALL


State 87 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: main

    2 main: main stmt
    3     | main func_decl
    4     | /* empty */

    5 func_decl: DECL_VARIABLE '(' param_list ')' '{' stmt_list '}'
    6          | DECL_VARIABLE '(' ')' '{' stmt_list '}'

    7 stmt: ';'
    8     | expr ';'
    9     | GETI '(' variable ')' ';'
   10     | GETC '(' variable ')' ';'
   11     | GETS '(' variable ')' ';'
   12     | PUTI '(' expr ')' ';'
   13     | PUTC '(' expr ')' ';'
   14     | PUTS '(' expr ')' ';'
   15     | PUTI_ '(' expr ')' ';'
   16     | PUTC_ '(' expr ')' ';'
   17     | PUTS_ '(' expr ')' ';'
   18     | variable '=' expr ';'
   19     | array '=' expr ';'
   20     | FOR '(' stmt stmt stmt ')' stmt
   21     | WHILE '(' expr ')' stmt
   22     | IF '(' expr ')' stmt
   23     | IF '(' expr ')' stmt ELSE stmt
   24     | BREAK ';'
   25     | CONTINUE ';'
   26     | RETURN expr ';'
   27     | '{' stmt_list '}'
   28     | DECL_VARIABLE '(' arg_list ')' ';'
   29     | DECL_VARIABLE '(' ')' ';'
   30     | DECL_ARRAY array ';'

   31 stmt_list: stmt
   32          | stmt_list stmt

   33 param_list: variable ',' variable
   34           | param_list ',' variable

   35 arg_list: expr ',' expr
   36         | arg_list ',' expr

   37 variable: VARIABLE
   38         | DECL_VARIABLE

   39 array: array_list ']'

   40 array_list: variable '[' expr
   41           | array_list ']' '[' expr

   42 expr: INTEGER
   43     | CHAR
   44     | STRING
   45     | array
   46     | variable
   47     | '-' expr
   48     | expr '+' expr
   49     | expr '-' expr
   50     | expr '*' expr
   51     | expr '%' expr
   52     | expr '/' expr
   53     | expr '<' expr
   54     | expr '>' expr
   55     | expr GE expr
   56     | expr LE expr
   57     | expr NE expr
   58     | expr EQ expr
   59     | expr AND expr
   60     | expr OR expr
   61     | '(' expr ')'
   62     | VARIABLE '(' arg_list ')'
   63     | VARIABLE '(' ')'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 51
'(' (40) 5 6 9 10 11 12 13 14 15 16 17 20 21 22 23 28 29 61 62 63
')' (41) 5 6 9 10 11 12 13 14 15 16 17 20 21 22 23 28 29 61 62 63
'*' (42) 50
'+' (43) 48
',' (44) 33 34 35 36
'-' (45) 47 49
'/' (47) 52
';' (59) 7 8 9 10 11 12 13 14 15 16 17 18 19 24 25 26 28 29 30
'<' (60) 53
'=' (61) 18 19
'>' (62) 54
'[' (91) 40 41
']' (93) 39 41
'{' (123) 5 6 27
'}' (125) 5 6 27
error (256)
INTEGER (258) 42
CHAR (259) 43
STRING (260) 44
VARIABLE (261) 37 62 63
DECL_VARIABLE (262) 5 6 28 29 38
FOR (263) 20
WHILE (264) 21
IF (265) 22 23
BREAK (266) 24
CONTINUE (267) 25
RETURN (268) 26
DECL_ARRAY (269) 30
GETI (270) 9
GETS (271) 11
GETC (272) 10
PUTI (273) 12
PUTS (274) 14
PUTC (275) 13
PUTI_ (276) 15
PUTS_ (277) 17
PUTC_ (278) 16
CALL (279)
IFX (280)
ELSE (281) 23
OR (282) 60
AND (283) 59
NE (284) 57
EQ (285) 58
LE (286) 56
GE (287) 55
UMINUS (288)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
main (52)
    on left: 2 3 4, on right: 1 2 3
func_decl (53)
    on left: 5 6, on right: 3
stmt (54)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
    26 27 28 29 30, on right: 2 20 21 22 23 31 32
stmt_list (55)
    on left: 31 32, on right: 5 6 27 32
param_list (56)
    on left: 33 34, on right: 5 34
arg_list (57)
    on left: 35 36, on right: 28 36 62
variable (58)
    on left: 37 38, on right: 9 10 11 18 33 34 40 46
array (59)
    on left: 39, on right: 19 30 45
array_list (60)
    on left: 40 41, on right: 39 41
expr (61)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63, on right: 8 12 13 14 15 16 17 18 19 21 22 23 26 35
    36 40 41 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61


state 0

    0 $accept: . program $end

    $default  reduce using rule 4 (main)

    program  go to state 1
    main     go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: main .
    2 main: main . stmt
    3     | main . func_decl

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 8
    FOR            shift, and go to state 9
    WHILE          shift, and go to state 10
    IF             shift, and go to state 11
    BREAK          shift, and go to state 12
    CONTINUE       shift, and go to state 13
    RETURN         shift, and go to state 14
    DECL_ARRAY     shift, and go to state 15
    GETI           shift, and go to state 16
    GETS           shift, and go to state 17
    GETC           shift, and go to state 18
    PUTI           shift, and go to state 19
    PUTS           shift, and go to state 20
    PUTC           shift, and go to state 21
    PUTI_          shift, and go to state 22
    PUTS_          shift, and go to state 23
    PUTC_          shift, and go to state 24
    '-'            shift, and go to state 25
    '('            shift, and go to state 26
    '{'            shift, and go to state 27
    ';'            shift, and go to state 28

    $default  reduce using rule 1 (program)

    func_decl   go to state 29
    stmt        go to state 30
    variable    go to state 31
    array       go to state 32
    array_list  go to state 33
    expr        go to state 34


state 3

    0 $accept: program $end .

    $default  accept


state 4

   42 expr: INTEGER .

    $default  reduce using rule 42 (expr)


state 5

   43 expr: CHAR .

    $default  reduce using rule 43 (expr)


state 6

   44 expr: STRING .

    $default  reduce using rule 44 (expr)


state 7

   37 variable: VARIABLE .
   62 expr: VARIABLE . '(' arg_list ')'
   63     | VARIABLE . '(' ')'

    '('  shift, and go to state 35

    $default  reduce using rule 37 (variable)


state 8

    5 func_decl: DECL_VARIABLE . '(' param_list ')' '{' stmt_list '}'
    6          | DECL_VARIABLE . '(' ')' '{' stmt_list '}'
   28 stmt: DECL_VARIABLE . '(' arg_list ')' ';'
   29     | DECL_VARIABLE . '(' ')' ';'
   38 variable: DECL_VARIABLE .

    '('  shift, and go to state 36

    $default  reduce using rule 38 (variable)


state 9

   20 stmt: FOR . '(' stmt stmt stmt ')' stmt

    '('  shift, and go to state 37


state 10

   21 stmt: WHILE . '(' expr ')' stmt

    '('  shift, and go to state 38


state 11

   22 stmt: IF . '(' expr ')' stmt
   23     | IF . '(' expr ')' stmt ELSE stmt

    '('  shift, and go to state 39


state 12

   24 stmt: BREAK . ';'

    ';'  shift, and go to state 40


state 13

   25 stmt: CONTINUE . ';'

    ';'  shift, and go to state 41


state 14

   26 stmt: RETURN . expr ';'

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 45


state 15

   30 stmt: DECL_ARRAY . array ';'

    VARIABLE       shift, and go to state 46
    DECL_VARIABLE  shift, and go to state 42

    variable    go to state 47
    array       go to state 48
    array_list  go to state 33


state 16

    9 stmt: GETI . '(' variable ')' ';'

    '('  shift, and go to state 49


state 17

   11 stmt: GETS . '(' variable ')' ';'

    '('  shift, and go to state 50


state 18

   10 stmt: GETC . '(' variable ')' ';'

    '('  shift, and go to state 51


state 19

   12 stmt: PUTI . '(' expr ')' ';'

    '('  shift, and go to state 52


state 20

   14 stmt: PUTS . '(' expr ')' ';'

    '('  shift, and go to state 53


state 21

   13 stmt: PUTC . '(' expr ')' ';'

    '('  shift, and go to state 54


state 22

   15 stmt: PUTI_ . '(' expr ')' ';'

    '('  shift, and go to state 55


state 23

   17 stmt: PUTS_ . '(' expr ')' ';'

    '('  shift, and go to state 56


state 24

   16 stmt: PUTC_ . '(' expr ')' ';'

    '('  shift, and go to state 57


state 25

   47 expr: '-' . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 58


state 26

   61 expr: '(' . expr ')'

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 59


state 27

   27 stmt: '{' . stmt_list '}'

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 60
    FOR            shift, and go to state 9
    WHILE          shift, and go to state 10
    IF             shift, and go to state 11
    BREAK          shift, and go to state 12
    CONTINUE       shift, and go to state 13
    RETURN         shift, and go to state 14
    DECL_ARRAY     shift, and go to state 15
    GETI           shift, and go to state 16
    GETS           shift, and go to state 17
    GETC           shift, and go to state 18
    PUTI           shift, and go to state 19
    PUTS           shift, and go to state 20
    PUTC           shift, and go to state 21
    PUTI_          shift, and go to state 22
    PUTS_          shift, and go to state 23
    PUTC_          shift, and go to state 24
    '-'            shift, and go to state 25
    '('            shift, and go to state 26
    '{'            shift, and go to state 27
    ';'            shift, and go to state 28

    stmt        go to state 61
    stmt_list   go to state 62
    variable    go to state 31
    array       go to state 32
    array_list  go to state 33
    expr        go to state 34


state 28

    7 stmt: ';' .

    $default  reduce using rule 7 (stmt)


state 29

    3 main: main func_decl .

    $default  reduce using rule 3 (main)


state 30

    2 main: main stmt .

    $default  reduce using rule 2 (main)


state 31

   18 stmt: variable . '=' expr ';'
   40 array_list: variable . '[' expr
   46 expr: variable .

    '='  shift, and go to state 63
    '['  shift, and go to state 64

    $default  reduce using rule 46 (expr)


state 32

   19 stmt: array . '=' expr ';'
   45 expr: array .

    '='  shift, and go to state 65

    $default  reduce using rule 45 (expr)


state 33

   39 array: array_list . ']'
   41 array_list: array_list . ']' '[' expr

    ']'  shift, and go to state 66


state 34

    8 stmt: expr . ';'
   48 expr: expr . '+' expr
   49     | expr . '-' expr
   50     | expr . '*' expr
   51     | expr . '%' expr
   52     | expr . '/' expr
   53     | expr . '<' expr
   54     | expr . '>' expr
   55     | expr . GE expr
   56     | expr . LE expr
   57     | expr . NE expr
   58     | expr . EQ expr
   59     | expr . AND expr
   60     | expr . OR expr

    OR   shift, and go to state 67
    AND  shift, and go to state 68
    '>'  shift, and go to state 69
    '<'  shift, and go to state 70
    NE   shift, and go to state 71
    EQ   shift, and go to state 72
    LE   shift, and go to state 73
    GE   shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79
    ';'  shift, and go to state 80


state 35

   62 expr: VARIABLE '(' . arg_list ')'
   63     | VARIABLE '(' . ')'

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26
    ')'            shift, and go to state 81

    arg_list    go to state 82
    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 83


state 36

    5 func_decl: DECL_VARIABLE '(' . param_list ')' '{' stmt_list '}'
    6          | DECL_VARIABLE '(' . ')' '{' stmt_list '}'
   28 stmt: DECL_VARIABLE '(' . arg_list ')' ';'
   29     | DECL_VARIABLE '(' . ')' ';'

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26
    ')'            shift, and go to state 84

    param_list  go to state 85
    arg_list    go to state 86
    variable    go to state 87
    array       go to state 44
    array_list  go to state 33
    expr        go to state 83


state 37

   20 stmt: FOR '(' . stmt stmt stmt ')' stmt

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 60
    FOR            shift, and go to state 9
    WHILE          shift, and go to state 10
    IF             shift, and go to state 11
    BREAK          shift, and go to state 12
    CONTINUE       shift, and go to state 13
    RETURN         shift, and go to state 14
    DECL_ARRAY     shift, and go to state 15
    GETI           shift, and go to state 16
    GETS           shift, and go to state 17
    GETC           shift, and go to state 18
    PUTI           shift, and go to state 19
    PUTS           shift, and go to state 20
    PUTC           shift, and go to state 21
    PUTI_          shift, and go to state 22
    PUTS_          shift, and go to state 23
    PUTC_          shift, and go to state 24
    '-'            shift, and go to state 25
    '('            shift, and go to state 26
    '{'            shift, and go to state 27
    ';'            shift, and go to state 28

    stmt        go to state 88
    variable    go to state 31
    array       go to state 32
    array_list  go to state 33
    expr        go to state 34


state 38

   21 stmt: WHILE '(' . expr ')' stmt

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 89


state 39

   22 stmt: IF '(' . expr ')' stmt
   23     | IF '(' . expr ')' stmt ELSE stmt

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 90


state 40

   24 stmt: BREAK ';' .

    $default  reduce using rule 24 (stmt)


state 41

   25 stmt: CONTINUE ';' .

    $default  reduce using rule 25 (stmt)


state 42

   38 variable: DECL_VARIABLE .

    $default  reduce using rule 38 (variable)


state 43

   40 array_list: variable . '[' expr
   46 expr: variable .

    '['  shift, and go to state 64

    $default  reduce using rule 46 (expr)


state 44

   45 expr: array .

    $default  reduce using rule 45 (expr)


state 45

   26 stmt: RETURN expr . ';'
   48 expr: expr . '+' expr
   49     | expr . '-' expr
   50     | expr . '*' expr
   51     | expr . '%' expr
   52     | expr . '/' expr
   53     | expr . '<' expr
   54     | expr . '>' expr
   55     | expr . GE expr
   56     | expr . LE expr
   57     | expr . NE expr
   58     | expr . EQ expr
   59     | expr . AND expr
   60     | expr . OR expr

    OR   shift, and go to state 67
    AND  shift, and go to state 68
    '>'  shift, and go to state 69
    '<'  shift, and go to state 70
    NE   shift, and go to state 71
    EQ   shift, and go to state 72
    LE   shift, and go to state 73
    GE   shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79
    ';'  shift, and go to state 91


state 46

   37 variable: VARIABLE .

    $default  reduce using rule 37 (variable)


state 47

   40 array_list: variable . '[' expr

    '['  shift, and go to state 64


state 48

   30 stmt: DECL_ARRAY array . ';'

    ';'  shift, and go to state 92


state 49

    9 stmt: GETI '(' . variable ')' ';'

    VARIABLE       shift, and go to state 46
    DECL_VARIABLE  shift, and go to state 42

    variable  go to state 93


state 50

   11 stmt: GETS '(' . variable ')' ';'

    VARIABLE       shift, and go to state 46
    DECL_VARIABLE  shift, and go to state 42

    variable  go to state 94


state 51

   10 stmt: GETC '(' . variable ')' ';'

    VARIABLE       shift, and go to state 46
    DECL_VARIABLE  shift, and go to state 42

    variable  go to state 95


state 52

   12 stmt: PUTI '(' . expr ')' ';'

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 96


state 53

   14 stmt: PUTS '(' . expr ')' ';'

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 97


state 54

   13 stmt: PUTC '(' . expr ')' ';'

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 98


state 55

   15 stmt: PUTI_ '(' . expr ')' ';'

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 99


state 56

   17 stmt: PUTS_ '(' . expr ')' ';'

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 100


state 57

   16 stmt: PUTC_ '(' . expr ')' ';'

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 101


state 58

   47 expr: '-' expr .
   48     | expr . '+' expr
   49     | expr . '-' expr
   50     | expr . '*' expr
   51     | expr . '%' expr
   52     | expr . '/' expr
   53     | expr . '<' expr
   54     | expr . '>' expr
   55     | expr . GE expr
   56     | expr . LE expr
   57     | expr . NE expr
   58     | expr . EQ expr
   59     | expr . AND expr
   60     | expr . OR expr

    $default  reduce using rule 47 (expr)


state 59

   48 expr: expr . '+' expr
   49     | expr . '-' expr
   50     | expr . '*' expr
   51     | expr . '%' expr
   52     | expr . '/' expr
   53     | expr . '<' expr
   54     | expr . '>' expr
   55     | expr . GE expr
   56     | expr . LE expr
   57     | expr . NE expr
   58     | expr . EQ expr
   59     | expr . AND expr
   60     | expr . OR expr
   61     | '(' expr . ')'

    OR   shift, and go to state 67
    AND  shift, and go to state 68
    '>'  shift, and go to state 69
    '<'  shift, and go to state 70
    NE   shift, and go to state 71
    EQ   shift, and go to state 72
    LE   shift, and go to state 73
    GE   shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79
    ')'  shift, and go to state 102


state 60

   28 stmt: DECL_VARIABLE . '(' arg_list ')' ';'
   29     | DECL_VARIABLE . '(' ')' ';'
   38 variable: DECL_VARIABLE .

    '('  shift, and go to state 103

    $default  reduce using rule 38 (variable)


state 61

   31 stmt_list: stmt .

    $default  reduce using rule 31 (stmt_list)


state 62

   27 stmt: '{' stmt_list . '}'
   32 stmt_list: stmt_list . stmt

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 60
    FOR            shift, and go to state 9
    WHILE          shift, and go to state 10
    IF             shift, and go to state 11
    BREAK          shift, and go to state 12
    CONTINUE       shift, and go to state 13
    RETURN         shift, and go to state 14
    DECL_ARRAY     shift, and go to state 15
    GETI           shift, and go to state 16
    GETS           shift, and go to state 17
    GETC           shift, and go to state 18
    PUTI           shift, and go to state 19
    PUTS           shift, and go to state 20
    PUTC           shift, and go to state 21
    PUTI_          shift, and go to state 22
    PUTS_          shift, and go to state 23
    PUTC_          shift, and go to state 24
    '-'            shift, and go to state 25
    '('            shift, and go to state 26
    '{'            shift, and go to state 27
    '}'            shift, and go to state 104
    ';'            shift, and go to state 28

    stmt        go to state 105
    variable    go to state 31
    array       go to state 32
    array_list  go to state 33
    expr        go to state 34


state 63

   18 stmt: variable '=' . expr ';'

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 106


state 64

   40 array_list: variable '[' . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 107


state 65

   19 stmt: array '=' . expr ';'

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 108


state 66

   39 array: array_list ']' .
   41 array_list: array_list ']' . '[' expr

    '['  shift, and go to state 109

    $default  reduce using rule 39 (array)


state 67

   60 expr: expr OR . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 110


state 68

   59 expr: expr AND . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 111


state 69

   54 expr: expr '>' . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 112


state 70

   53 expr: expr '<' . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 113


state 71

   57 expr: expr NE . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 114


state 72

   58 expr: expr EQ . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 115


state 73

   56 expr: expr LE . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 116


state 74

   55 expr: expr GE . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 117


state 75

   48 expr: expr '+' . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 118


state 76

   49 expr: expr '-' . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 119


state 77

   50 expr: expr '*' . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 120


state 78

   52 expr: expr '/' . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 121


state 79

   51 expr: expr '%' . expr

    INTEGER        shift, and go to state 4
    CHAR           shift, and go to state 5
    STRING         shift, and go to state 6
    VARIABLE       shift, and go to state 7
    DECL_VARIABLE  shift, and go to state 42
    '-'            shift, and go to state 25
    '('            shift, and go to state 26

    variable    go to state 43
    array       go to state 44
    array_list  go to state 33
    expr        go to state 122


state 80

    8 stmt: expr ';' .

    $default  reduce using rule 8 (stmt)


state 81

   63 expr: VARIABLE '(' ')' .

    $default  reduce using rule 63 (expr)


state 82

   36 arg_list: arg_list . ',' expr
   62 expr: VARIABLE '(' arg_list . ')'

    ')'  shift, and go to state 123
    ','  shift, and go to state 124


state 83

   35 arg_list: expr . ',' expr
   48 expr: expr . '+' expr
   49     | expr . '-' expr
   50     | expr . '*' expr
   51     | expr . '%' expr
   52     | expr . '/' expr
   53     | expr . '<' expr
   54     | expr . '>' expr
   55     | expr . GE expr
   56     | expr . LE expr
   57     | expr . NE expr
   58     | expr . EQ expr
   59     | expr . AND expr
   60     | expr . OR expr

    OR   shift, and go to state 67
    AND  shift, and go to state 68
    '>'  shift, and go to state 69
    '<'  shift, and go to state 70
    NE   shift, and go to state 71
    EQ   shift, and go to state 72
    LE   shift, and go to state 73
    GE   shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '%'  shift, and go to state 79
    ','  shift, and go to state 125


state 84

    6 func_decl: DECL_VARIABLE '(' ')' . '{' stmt_list '}'
   29 stmt: DECL_VARIABLE '(' ')' . ';'

    '{'  shift, and go to state 126
    ';'  shift, and go to state 127


state 85

    5 func_decl: DECL_VARIABLE '(' param_list . ')' '{' stmt_list '}'
   34 param_list: param_list . ',' variable

    ')'  shift, and go to state 128
    ','  shift, and go to state 129


state 86

   28 stmt: DECL_VARIABLE '(' arg_list . ')' ';'
   36 arg_list: arg_list . ',' expr

    ')'  shift, and go to state 130
    ','  shift, and go to state 124


state 87

   33 param_list: variable . ',' variable
   40 array_list: variable . '[' expr
   46 expr: variable .

    ','  shift, and go to state 131
    '['  shift, and go to state 64

    ','       [reduce using rule 46 (expr)]
    $default  reduce using rule 46 (expr)


state 88

   20 stmt: FOR '(' stmt . stmt stmt ')' stmt
